Added a new course

--- a/courses.html
+++ b/courses.html
@@ -127,6 +127,55 @@
             </div>
         </section>
 
+        <section id="spark" class="course-detail">
+            <div class="course-content">
+                <div class="course-info">
+                    <h2><i class="fas fa-fire"></i> Apache Spark and Databricks for Beginners</h2>
+                    <div class="course-meta">
+                        <span><i class="fas fa-clock"></i> Duration: 10 weeks</span>
+                        <span><i class="fas fa-level-up-alt"></i> Level: Beginner to Intermediate</span>
+                        <span><i class="fas fa-users"></i> Batch Size: 15 students</span>
+                    </div>
+                    <div class="course-description">
+                        <h3>Course Overview</h3>
+                        <p>Learn how to process and analyze big data using Apache Spark and the Databricks platform. This course will teach you the fundamentals of distributed computing and how to build scalable data processing applications.</p>
+                        
+                        <h3>What You'll Learn</h3>
+                        <ul>
+                            <li>Apache Spark architecture and components</li>
+                            <li>Databricks workspace and notebooks</li>
+                            <li>Data processing with Spark SQL</li>
+                            <li>Batch and streaming data processing</li>
+                            <li>Machine learning with Spark MLlib</li>
+                            <li>Delta Lake and data lakehouse architecture</li>
+                            <li>Performance optimization and tuning</li>
+                            <li>Real-world project implementation</li>
+                        </ul>
+
+                        <h3>Prerequisites</h3>
+                        <ul>
+                            <li>Basic Python programming knowledge</li>
+                            <li>Understanding of SQL fundamentals</li>
+                            <li>Familiarity with basic data concepts</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="course-cta">
+                    <div class="price">
+                        <span class="amount">$799</span>
+                        <span class="period">/ course</span>
+                    </div>
+                    <a href="#enroll" class="enroll-button">Enroll Now</a>
+                    <div class="features">
+                        <p><i class="fas fa-check"></i> Live online sessions</p>
+                        <p><i class="fas fa-check"></i> Hands-on labs in Databricks</p>
+                        <p><i class="fas fa-check"></i> Industry certification prep</p>
+                        <p><i class="fas fa-check"></i> Project-based learning</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <section id="enroll" class="enrollment-section">
             <h2>Ready to Start Your Journey?</h2>
             <div class="enrollment-form">
@@ -142,6 +191,7 @@
                             <option value="">Select Course</option>
                             <option value="python">Python for Beginners</option>
                             <option value="data-engineering">Data Engineering Essentials</option>
+                            <option value="spark">Apache Spark and Databricks</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -165,6 +215,7 @@
                     <li><a href="index.html#services">Services</a></li>
                     <li><a href="#python">Python Course</a></li>
                     <li><a href="#data-engineering">Data Engineering Course</a></li>
+                    <li><a href="#spark">Spark & Databricks Course</a></li>
                 </ul>
             </div>
             <div class="footer-section">
