--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                     <p>Comprehensive training in modern data engineering tools and techniques</p>
                     <a href="courses.html#data-engineering" class="course-button">Learn More</a>
                 </div>
+                <div class="card">
+                    <i class="fas fa-fire"></i>
+                    <h3>Apache Spark and Databricks</h3>
+                    <p>Master big data processing with Apache Spark and Databricks platform</p>
+                    <a href="courses.html#spark" class="course-button">Learn More</a>
+                </div>
             </div>
         </section>
 
