Added the link at home

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="hero-content">
                 <h1>Welcome to ITVersity</h1>
                 <p>Empowering careers through quality training and placement assistance</p>
+                <p class="hero-highlights">Python • Data Engineering • Apache Spark</p>
                 <a href="#courses" class="cta-button">Explore Our Courses</a>
             </div>
         </section>
@@ -37,8 +38,8 @@
             <div class="service-cards">
                 <div class="card">
                     <i class="fas fa-chalkboard-teacher"></i>
-                    <h3>Training</h3>
-                    <p>Industry-relevant training programs designed to build your technical skills</p>
+                    <h3>Expert Training</h3>
+                    <p>Comprehensive technical training in Python, Data Engineering, and Apache Spark, designed to build industry-relevant skills</p>
                 </div>
                 <div class="card">
                     <i class="fas fa-handshake"></i>
